# powerplant-coding-challenge

./: .dockerignore  Dockerfile  README.md  pyproject.toml
powerplant-coding-challenge/: app.py  powerplant_optimizer.py  utils.py
src/: __main__.py  api.py  sandbox.py
src/powerplant-coding-challenge/: __main__.py  api.py  powerplant_optimizer.py  sandbox.py
src/powerplant_coding_challenge/: app.py  powerplant_optimizer.py
tests/: test_powerplant_optimizer.py  test_utils.py
