[tool.poetry]
name = "powerplant-coding-challenge"
version = "0.1.0"
description = "Powerplant coding challenge"
authors = ["Julien <julien.laffargue@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
Flask = "^3.0.3"
numpy = "^2.1.3"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
